<resources>
    <string name="app_name">Lifesum</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="my_food">My Food</string>
    <string name="three_dots_menu">⋮</string>
    <string name="save">Save</string>
    <string name="error_search">Error searching food.</string>
    <string name="retry">Retry</string>
    <string name="error_saving_food">Error while saving food.</string>
    <string name="food_save_success">Food saved.</string>
    <string name="saved_food_error">No food saved. Search food and save it.</string>
    <string name="undo">Undo</string>
    <string name="food_deleted">Food deleted.</string>
    <string name="no_results_found">No results found.</string>
    <string name="nutrition_info">Nutrition info</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fiber">Fiber</string>
    <string name="sugars">Sugars</string>
    <string name="fat">Fat</string>
    <string name="saturated_fat">Saturated fat</string>
    <string name="unsaturated_fat">Unsaturated fat</string>
    <string name="other">Other</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="potassium">Potassium</string>
</resources>
