<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:tools="http://schemas.android.com/tools"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       android:layout_height="match_parent"
                                       android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_16"
            tools:context=".ui.fragments.DetailsFragment">

        <TextView
                android:id="@+id/nutrition_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nutrition_info"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingBottom="@dimen/padding_16"
                android:textAppearance="?android:textAppearanceLarge"/>

        <TextView
                android:id="@+id/nutrition_calories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@+id/nutrition_calories_value"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_info"
                android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
                android:id="@+id/nutrition_calories_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="100 kcal"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/nutrition_calories"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_info"
                android:textAlignment="textEnd"
                android:textAppearance="?android:textAppearance"/>

        <TextView
                android:id="@+id/nutrition_protein"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/protein"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@+id/nutrition_protein_value"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_calories"
                android:paddingBottom="@dimen/title_padding"
                android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
                android:id="@+id/nutrition_protein_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="100 g"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/nutrition_protein"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_calories"
                android:textAlignment="textEnd"
                android:textAppearance="?android:textAppearance"/>

        <TextView
                android:id="@+id/nutrition_carbs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/carbs"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_protein"
                android:textAppearance="?android:textAppearanceLarge"/>

        <TextView
                android:id="@+id/nutrition_fiber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fiber"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@+id/nutrition_fiber_value"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_carbs"
                android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
                android:id="@+id/nutrition_fiber_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="100 g"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/nutrition_fiber"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_carbs"
                android:textAlignment="textEnd"
                android:textAppearance="?android:textAppearance"/>

        <TextView
                android:id="@+id/nutrition_sugars"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sugars"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@+id/nutrition_sugars_value"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_fiber"
                android:paddingBottom="@dimen/title_padding"
                android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
                android:id="@+id/nutrition_sugars_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="100 g"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/nutrition_sugars"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_fiber"
                android:textAlignment="textEnd"
                android:textAppearance="?android:textAppearance"/>

        <TextView
                android:id="@+id/nutrition_fat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fat"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_sugars"
                android:textAppearance="?android:textAppearanceLarge"/>

        <TextView
                android:id="@+id/nutrition_saturated_fat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/saturated_fat"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@+id/nutrition_saturated_fat_value"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_fat"
                android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
                android:id="@+id/nutrition_saturated_fat_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="100 g"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/nutrition_saturated_fat"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_fat"
                android:textAlignment="textEnd"
                android:textAppearance="?android:textAppearance"/>

        <TextView
                android:id="@+id/nutrition_unsaturated_fat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/unsaturated_fat"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@+id/nutrition_unsaturated_fat_value"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_saturated_fat"
                android:paddingBottom="@dimen/title_padding"
                android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
                android:id="@+id/nutrition_unsaturated_fat_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="100 g"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/nutrition_unsaturated_fat"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_saturated_fat"
                android:textAlignment="textEnd"
                android:textAppearance="?android:textAppearance"/>

        <TextView
                android:id="@+id/nutrition_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_unsaturated_fat"
                android:textAppearance="?android:textAppearanceLarge"/>

        <TextView
                android:id="@+id/nutrition_cholesterol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cholesterol"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@+id/nutrition_cholesterol_value"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_other"
                android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
                android:id="@+id/nutrition_cholesterol_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="100 g"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/nutrition_cholesterol"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_other"
                android:textAlignment="textEnd"
                android:textAppearance="?android:textAppearance"/>

        <TextView
                android:id="@+id/nutrition_sodium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sodium"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@+id/nutrition_sodium_value"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_cholesterol"
                android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
                android:id="@+id/nutrition_sodium_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="100 g"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/nutrition_sodium"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_cholesterol"
                android:textAlignment="textEnd"
                android:textAppearance="?android:textAppearance"/>

        <TextView
                android:id="@+id/nutrition_potassium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/potassium"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@+id/nutrition_potassium_value"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_sodium"
                android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
                android:id="@+id/nutrition_potassium_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="100 g"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/nutrition_potassium"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_sodium"
                android:textAlignment="textEnd"
                android:textAppearance="?android:textAppearance"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>